teste login form

--- a/GAtec.Seletivo.Web/Content/Site.css
+++ b/GAtec.Seletivo.Web/Content/Site.css
@@ -1,12 +1,18 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿body, html{
+    height: 100%;
+    margin:0;
+    padding: 0;
+}
+
+body {
+    /*padding-top: 50px;
+    padding-bottom: 20px;*/
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+   /* padding-left: 15px;
+    padding-right: 15px;*/
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -21,4 +27,23 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.bg {
+    /* The image used */
+    background-image: url("images/login_background.jpg");
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.form-front {
+    background-color: aliceblue;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
