--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -9,9 +9,11 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
+    <link rel="stylesheet" type="text/css" href="~/Content/Site.css">
 </head>
 <body>
-    <div> 
+    <div class="bg"> 
     </div>
+    <div class="form-front">teste</div>
 </body>
 </html>
