--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -11,10 +11,56 @@
     <meta name="viewport" content="width=device-width" />
     <title>Index</title>
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css">
+
+    @*<link rel="stylesheet" href="styles/kendo.common.min.css" />
+    <link rel="stylesheet" href="styles/kendo.default.min.css" />
+    <link rel="stylesheet" href="styles/kendo.default.mobile.min.css" />
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/kendo.all.min.js"></script>*@
 </head>
 <body>
     <div class="bg"> 
     </div>
-    <div class="form-front">teste</div>
+    <div class="form-front">
+
+        @using (Html.BeginForm("Index", "Login", FormMethod.Post))
+        {
+            <div class="row form-group">
+                <div class="col col-md-2">
+                    @Html.LabelFor(model => model.Username)
+                </div>
+                <div class="col col-md-5">
+                    @Html.TextBoxFor(model => model.Username, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Username)
+                </div>
+            </div>
+
+            <div class="row form-group">
+                <div class="col col-xs-12 col-md-2">
+                    @Html.LabelFor(model => model.Password)
+                </div>
+                <div class="col col-xs-12 col-md-5">
+                    @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.Password)
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col col-md-6">
+                    <button type="submit" class="btn btn-success">
+                        Login
+                    </button>
+                </div>
+                <div class="col col-md-6">
+                    <button type="submit" class="btn btn-info">
+                        Cadastrar
+                    </button>
+                </div>
+            </div>
+        }
+
+    </div>
 </body>
 </html>
+
