--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -12,6 +12,8 @@
     <title>Index</title>
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css">
 
+    <link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen" />
+
     @*<link rel="stylesheet" href="styles/kendo.common.min.css" />
     <link rel="stylesheet" href="styles/kendo.default.min.css" />
     <link rel="stylesheet" href="styles/kendo.default.mobile.min.css" />
@@ -48,13 +50,14 @@
 
             <div class="row">
                 <div class="col col-md-6">
-                    <button type="submit" class="btn btn-success">
-                        Login
-                    </button>
-                </div>
-                <div class="col col-md-6">
                     <button type="submit" class="btn btn-info">
                         Cadastrar
+                    </button>
+                </div>
+
+                <div class="col col-md-6">
+                    <button type="submit" class="btn btn-success">
+                        Login
                     </button>
                 </div>
             </div>
