--- a/GAtec.Seletivo.Web/Views/Shared/_Layout.cshtml
+++ b/GAtec.Seletivo.Web/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("GAtec Seletivo", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -28,6 +28,7 @@
         </div>
     </div>
     <div class="container body-content">
+        <br/><br/>
         @RenderBody()
         <hr />
         <footer>
