--- a/GAtec.Seletivo.Web/Content/Site.css
+++ b/GAtec.Seletivo.Web/Content/Site.css
@@ -46,4 +46,9 @@ textarea {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    
+}
+
+#form-main {
+    background-color: blue;
 }
