--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -14,56 +14,58 @@
 
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen" />
 
-    @*<link rel="stylesheet" href="styles/kendo.common.min.css" />
-    <link rel="stylesheet" href="styles/kendo.default.min.css" />
-    <link rel="stylesheet" href="styles/kendo.default.mobile.min.css" />
-
-    <script src="js/jquery.min.js"></script>
-    <script src="js/kendo.all.min.js"></script>*@
 </head>
 <body>
-    <div class="bg"> 
+    <div class="bg">
     </div>
     <div class="form-front">
-
         @using (Html.BeginForm("Index", "Login", FormMethod.Post))
-        {
+            {
+            <div class="col form-group">
+                <div class="col col-md-12"></div>
+                <div class="col col-md-12"></div>
+            </div>
             <div class="row form-group">
-                <div class="col col-md-2">
+                <div class="col col-md-1"></div>
+                <div class="col col-md-3">
                     @Html.LabelFor(model => model.Username)
                 </div>
                 <div class="col col-md-5">
                     @Html.TextBoxFor(model => model.Username, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Username)
                 </div>
+                <div class="col col-md-2"></div>
             </div>
 
             <div class="row form-group">
-                <div class="col col-xs-12 col-md-2">
+                <div class="col col-md-1"></div>
+                <div class="col col-xs-12 col-md-3">
                     @Html.LabelFor(model => model.Password)
                 </div>
-                <div class="col col-xs-12 col-md-5">
+                <div class="col col-xs-12 col-md-6">
                     @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Password)
                 </div>
+                <div class="col col-md-2"></div>
             </div>
 
             <div class="row">
-                <div class="col col-md-6">
-                    <button type="submit" class="btn btn-info">
-                        Cadastrar
-                    </button>
-                </div>
+                <div class="col col-md-2"></div>
+                @*@<div class="col col-md-4">
+                        <button type="submit" class="btn btn-info">
+                            Cadastrar
+                        </button>
+                    </div>*@
 
-                <div class="col col-md-6">
+                <div class="col col-md-4">
                     <button type="submit" class="btn btn-success">
                         Login
                     </button>
                 </div>
+                <div class="col col-md-2"></div>
             </div>
         }
 
     </div>
 </body>
 </html>
-
