--- a/GAtec.Seletivo.Web/Content/Site.css
+++ b/GAtec.Seletivo.Web/Content/Site.css
@@ -1,18 +1,16 @@
-﻿body, html{
+﻿body, html {
     height: 100%;
-    margin:0;
-    padding: 0;
 }
 
 body {
-    /*padding-top: 50px;
-    padding-bottom: 20px;*/
+    padding-top: 50px;
+    padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-   /* padding-left: 15px;
-    padding-right: 15px;*/
+    padding-left: 15px;
+    padding-right: 15px;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -29,6 +27,11 @@ textarea {
     max-width: 280px;
 }
 
+.reset {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
 .bg {
     /* The image used */
     background-image: url("images/login_background.jpg");
@@ -40,8 +43,9 @@ textarea {
     background-size: cover;
     position: relative;
 }
+
 .form-front {
-    background-color: aliceblue;
+    /*background-color: aliceblue;*/
     position: absolute;
     top: 50%;
     left: 50%;
