--- a/GAtec.Seletivo.Web/Views/Exam/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Exam/Index.cshtml
@@ -1,12 +1,49 @@
-﻿
+﻿@model GAtec.Seletivo.Domain.Model.Exam
 @{
     ViewBag.Title = "Exam";
 }
 
-<div class="container-fluid">
+<h2> Cadastro de exames</h2>
+
+<div class="container">
     <div class="row">
-        <div class="text-center">
-            <h1>Teste</h1>
-        </div>
+        @using (Html.BeginForm("Create", "Exam", FormMethod.Post))
+        {
+            <div class="row form-group">
+                @Html.LabelFor(model => model.Name, new { @class = "col-form-label" })
+                @Html.TextBoxFor(model => model.Name, new { @class = " form-control" })
+            </div>
+            <button type="submit" class="btn btn-info">
+                Cadastrar
+            </button>
+
+        }
     </div>
 </div>
+
+<div id="grid"></div>
+
+<script>
+
+    $(document).ready(function () {
+
+        $("#grid").kendoGrid({
+            dataSource: {
+                transport: {
+                    read: "@Url.Action("IndexAsync","Exam")",
+                    dataType: "json",
+                    type: "GET"
+                }
+            },
+            columns: [{               
+                field: "Name",
+                title: "Nome"           
+            },{
+                 template: "<button class = 'btn btn-danger'>Excluir</button>"
+            }]
+        });
+    });
+
+</script>
+
+
