--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -15,54 +15,54 @@
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" media="screen" />
 
     @*<link rel="stylesheet" href="styles/kendo.common.min.css" />
-    <link rel="stylesheet" href="styles/kendo.default.min.css" />
-    <link rel="stylesheet" href="styles/kendo.default.mobile.min.css" />
+        <link rel="stylesheet" href="styles/kendo.default.min.css" />
+        <link rel="stylesheet" href="styles/kendo.default.mobile.min.css" />
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/kendo.all.min.js"></script>*@
+        <script src="js/jquery.min.js"></script>
+        <script src="js/kendo.all.min.js"></script>*@
 </head>
-<body>
-    <div class="bg"> 
-    </div>
-    <div class="form-front">
+<body class="reset">
+    <div class="bg">
 
-        @using (Html.BeginForm("Index", "Login", FormMethod.Post))
-        {
-            <div class="row form-group">
-                <div class="col col-md-2">
-                    @Html.LabelFor(model => model.Username)
-                </div>
-                <div class="col col-md-5">
-                    @Html.TextBoxFor(model => model.Username, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Username)
+        <div class="form-front container">
+            <div class="row justify-content-md-center justify-content-sm-center">
+                <div class="card ">
+                    <div class="card-header bg-info text-white">Sign In</div>
+                    <div class="card-body">
+                        @using (Html.BeginForm("Index", "Login", FormMethod.Post))
+                        {
+                            <div class="row form-group">
+                                @Html.LabelFor(model => model.Username, new { @class = "col-form-label" })
+                                <div class="input-group mb-2">
+                                    <div class="input-group-prepend">
+                                        <div class="input-group-text">
+                                            @@
+                                        </div>
+                                    </div>
+                                    @Html.TextBoxFor(model => model.Username, new { @class = " form-control" })
+                                    @Html.ValidationMessageFor(model => model.Username)
+                                </div>
+                            </div>
+
+                            <div class="row form-group">
+                                @Html.LabelFor(model => model.Password)
+
+                                @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(model => model.Password)
+                            </div>
+                            <button type="submit" class="btn btn-info">
+                                Cadastrar
+                            </button>
+
+                            <button type="submit" class="btn btn-success">
+                                Login
+                            </button>
+
+                        }
+                    </div>
                 </div>
             </div>
-
-            <div class="row form-group">
-                <div class="col col-xs-12 col-md-2">
-                    @Html.LabelFor(model => model.Password)
-                </div>
-                <div class="col col-xs-12 col-md-5">
-                    @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(model => model.Password)
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="col col-md-6">
-                    <button type="submit" class="btn btn-info">
-                        Cadastrar
-                    </button>
-                </div>
-
-                <div class="col col-md-6">
-                    <button type="submit" class="btn btn-success">
-                        Login
-                    </button>
-                </div>
-            </div>
-        }
-
+        </div>
     </div>
 </body>
 </html>
