--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GAtec.Seletivo.Domain.Model.Extended.LoginInfo
 
 @{
-    Layout = null;
+    ViewBag.Title = "Login";
 }
 
 <!DOCTYPE html>
