resolve problem with login in navbar

--- a/GAtec.Seletivo.Web/Views/Shared/_Layout.cshtml
+++ b/GAtec.Seletivo.Web/Views/Shared/_Layout.cshtml
@@ -28,7 +28,6 @@
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", null, new { @class = "nav-link" })</li>
             </ul>
         </div>
-    </div> 
 
         <div class="pull-right">
             <ul class="nav navbar-nav">
@@ -44,11 +43,14 @@
                 }
                 else
                 {
-                    <li class="pull-right">@Html.ActionLink("LogIn", "Index", "Login")</li>
+                    <li class="pull-right">@Html.ActionLink("LogIn", "Index", "Login", null, new { @class = "nav-link" })</li>
                 }
 
             </ul>
         </div>
+    </div>
+
+
 
     <div class="container body-content">
         @RenderBody()
