--- a/GAtec.Seletivo.Web/Views/Login/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Login/Index.cshtml
@@ -17,6 +17,11 @@
 
 </head>
 <body class="reset">
+    <nav class="navbar navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">GAtec Seletivo</a>
+        <a class="nav-item nav-link">@Html.ActionLink("Admin", "Index", "Admin", null, new { @class = "nav-link" })</a>
+        <!-- Navbar content -->
+    </nav>
     <div class="bg">
     </div>
     <div class="form-front">
