--- a/GAtec.Seletivo.Web/Views/Recruitment/Teste.cshtml
+++ b/GAtec.Seletivo.Web/Views/Recruitment/Teste.cshtml
@@ -5,3 +5,28 @@
 
 <h2>Teste</h2>
 
+<div class="container">
+    <ul id="menu">
+        <li>
+            Normal Item
+            <ul>
+                <li><span class="k-sprite icon-class"></span>Item with a Sprite</li>
+                <li><img src="Icons/contacts.gif" />Item with an Icon</li>
+            </ul>
+        </li>
+        <li><a href="http://www.google.com">Navigation Item</a></li>
+        <li class="k-state-active">Active Item</li>
+        <li>
+            Template Item
+            <div class="k-group k-content">
+                Test button - <a class="k-button">Button</a>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<script>
+    $(document).ready(function () {
+        $("#menu").kendoMenu();
+    });
+</script>
