alter menu, alter action, alter controllers

--- a/GAtec.Seletivo.Web/Views/Main/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Main/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿
 @{
-    Layout = null;
+    // Layout = null;
+    ViewBag.title = "Admin";
 }
 
-<!DOCTYPE html>
+@*<!DOCTYPE html>
 
 <html>
 <head>
@@ -84,4 +85,4 @@
         </ul>
     </nav>
 </body>
-</html>
+</html>*@
