--- a/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
+++ b/GAtec.Seletivo.Web/Views/Answer/Details.cshtml
@@ -92,10 +92,13 @@
             dataSource: data
         });
 
+        var url = '@Url.Action("IndexAsync","Answer", new { id = "__id__"})';
+        var questionId = $("#questionId").val();        
+
         $("#grid").kendoGrid({
                 dataSource: {
                     transport: {
-                        read: "@Url.Action("IndexAsync","Answer")",
+                        read: url.replace('__id__', questionId),
                         dataType: "json",
                         type: "GET"
                     },
