--- a/GAtec.Seletivo.Web/Views/Exam/Index.cshtml
+++ b/GAtec.Seletivo.Web/Views/Exam/Index.cshtml
@@ -2,11 +2,12 @@
 @{
     ViewBag.Title = "Exam";
 }
-
-<h2> Cadastro de exames</h2>
+<p></p>
+<h3> Cadastro de exames</h3>
 
 <div class="container">
-    <div class="row">
+    <div class="col-md-4"></div>
+    <div class="row col-md-8">
         <form id="form-create">
             <div class="row form-group">
                 @Html.LabelFor(model => model.Name, new { @class = "col-form-label" })
@@ -15,11 +16,11 @@
             <button type="submit" id="create" class="btn btn-info">
                 Cadastrar
             </button>
-        </form>      
+        </form>
     </div>
 </div>
-
-<div id="grid" class="col-md-8"></div>
+<p></p>
+<div id="grid"></div>
 
 <!-- Modal -->
 <div class="modal fade" id="modal-edit"  role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -54,7 +55,7 @@
 
 <script>
 
-    $(document).ready(function () {        
+    $(document).ready(function () {
 
         $("#grid").kendoGrid({
             dataSource: {
@@ -64,6 +65,7 @@
                     type: "GET"
                 }
             },
+            height: 500,
             columns: [{
                 field: "Id",
                 hidden: true
@@ -86,7 +88,7 @@
 
         $.ajax({
             type: "POST",
-            url: 'Create',
+            url: '@Url.Action("Create", "Exam")',
             data: data,
             success: function () {
                 atualizarGrid();
@@ -113,7 +115,7 @@
 
         $.ajax({
             type: "POST",
-            url: 'Update', 
+            url: '@Url.Action("Update", "Exam")',
             data: data,
             success: function () {
             atualizarGrid();
@@ -127,8 +129,9 @@
             $tr = $button.closest("tr");
             dataItem = grid.dataItem($tr);
 
+            var url = '@Url.Action("Delete","Exam", new { id = "__id__"})';
             $.ajax({
-                url: 'Delete/' + dataItem.Id
+                url: url.replace('__id__', dataItem.Id)
             }).done(function () {
                 $tr.remove();
                 atualizarGrid();
